@@ -1,5 +1,10 @@
 2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/term/terminfo.c (grub_terminfo_getkey): Fix incorrect queue
+	handling.
+
+2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/disk/diskfilter.c (read_segment): Fix the case when disknr
 	falls on Q syndrom.
 
